--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -24,7 +24,8 @@ $\\[0.5cm]$
    CPU & = & Central Processing Unit\\
    GB & = & Gigabyte \\
    RAM & = & Random Access Memory \\
-   HDD & = &  Hard Disk Drive
+   HDD & = &  Hard Disk Drive \\
+   FPGA & = & Field Programmable Gate Array
 \end{tabular}
 \end{center}
 
