--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,5 +1,5 @@
 %===================================== CHAP 5 =================================
 
 \chapter{Experiments}
-Describe experiments performed, what data was gathered and how.
+In order to get data to analyse and evaluate the proposed methodology, a series of experiments was performed using a small boat in the channel near Ravnkloa in Trondheim. The sensors were mounted on a rigid mount, and the boat performed a series of maneuvers in front of the sensors. The data was saved in rosbags during the experiments, to be post-processed in MATLAB after the data gathering.
 \cleardoublepage
