--- a/docsetup.tex
+++ b/docsetup.tex
@@ -9,6 +9,7 @@
 \usepackage{gensymb}
 \usepackage{subcaption}
 \usepackage{listings}
+\usepackage{interval}
 \usepackage[Lenny]{fncychap}
 \usepackage[pdftex,bookmarks=true]{hyperref}
 \usepackage[pdftex]{hyperref}
