--- a/mylib.bib
+++ b/mylib.bib
@@ -246,6 +246,22 @@ isbn = {},
   note = {Accessed: 2017-12-06},
 }
 
+@misc{rosbag,
+	title = {rosbag - ROS Wiki},
+	howpublished = {\url{http://wiki.ros.org/rosbag}},
+	note = {Accessed: 2017-12-09},
+}
+
+@manual{velodyne_vlp16,
+	author = {Velodyne LiDAR, Inc.},
+	title = {User Manual and Programming Guide, VLP-16},
+	language = {English},
+	version = {63-9243 Rev B Mar 16},
+	organization = {Velodyne LiDAR, Inc.},
+	pagetotal = {49},
+	pubstate = {March, 2016},
+}
+
 @article{ILSVRC15,
 Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
 Title = {{ImageNet Large Scale Visual Recognition Challenge}},
