Add various figures, started ch. 5, ch. 2 almost done

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -195,7 +195,7 @@ The Velodyne VLP-16 is shown in figure \ref{fig:vlp_16}.
 	\label{fig:vlp_16}
 \end{figure}
 \subsection{Lidar Sensor Model}
-A lidar is an optical detector, similar to a digital camera in that it responds to the intensity of the light hitting the detector, generating a voltage equal to the square of the intensity of the impinging light \cite{SpieLidar}. A rotating 3D lidar returns the intensity of the measured signal along with the range calculated from the travel time, as well as the azimuth (rotation) angle and the vertical angle of the point. The lidar has its own reference frame (in sperical coordinates), and it keeps track of its own orientation, giving the azimuth angle of a point relative to some reference angle (typically determined by the manufacturer), and the vertical angle is referenced to the horizontal plane in the lidar frame of reference. The coordinates of a point in the lidar frame therefore consists of two angles, $\alpha$ and $\beta$, as well as the distance $R$ from the lidar to the point. Figure \ref{fig:lidar_spherical} illustrates this.
+A lidar is an optical detector, similar to a digital camera in that it responds to the intensity of the light hitting the detector, generating a voltage equal to the square of the intensity of the impinging light \cite{SpieLidar}. A rotating 3D lidar returns the intensity of the measured signal along with the range calculated from the travel time, as well as the azimuth (rotation) angle and the vertical angle of the point. The lidar has its own reference frame (in sperical coordinates), and it keeps track of its laser array angle, giving the azimuth angle of a point relative to some reference angle (typically determined by the manufacturer), and the vertical angle is referenced to the horizontal plane in the lidar frame of reference. The coordinates of a point in the lidar frame therefore consists of two angles, $\alpha$ and $\beta$, as well as the distance $R$ from the lidar to the point. Figure \ref{fig:lidar_spherical} illustrates this.
 \begin{figure}[H]
     \centering
     \includegraphics[width=.6\linewidth]{fig/sperical_to_cartesian.png}
@@ -212,7 +212,7 @@ From figure \ref{fig:lidar_spherical}, using basic trigonometry, we get that the
         Z&=R\sin{\beta}
     \end{split}
 \end{equation}
-The range returned by the Velodyne VLP-16 lidar is measured along a beam at known azimuth angles $\alpha$, and the 16 laser/detector pairs are mounted vertically at equidistant angles from -15$\degree$ to 15$\degree$. When the lidar is rotating at a frequency of 10 Hz the lasers fire at every $0.2\degree$, with a total of $1800$ laser firings for a full rotation. The theoretical maximum number of range measurements for a full $360\degree$ scan is therefore $\frac{360}{0.2}\times16=28800$ measurements, where every single laser beam is reflected and detected at the lidar.
+The range returned by the Velodyne VLP-16 lidar is measured along a beam at known azimuth angles $\alpha$, and the 16 laser/detector pairs are mounted vertically at 2$\degree$ intervals from -15$\degree$ to 15$\degree$ referenced to the horizon. When the lidar is rotating at a frequency of 10 Hz the lasers fire at every $0.2\degree$, with a total of $1800$ laser firings for a full rotation. The theoretical maximum number of range measurements for a full $360\degree$ scan is therefore $\frac{360}{0.2}\times16=28800$ measurements, where it is assumed that every single laser beam is reflected, and subsequently detected at the lidar.
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}{.5\textwidth}
