--- a/mylib.bib
+++ b/mylib.bib
@@ -234,7 +234,7 @@ isbn = {},
 
 @misc{camera_calibrator,
 	title = {Estimate geometric parameters of a single camera - MATLAB},
-	author = {MathWorks, Inc},
+	author = {MathWorks},
 	howpublished = {\url{https://se.mathworks.com/help/vision/ref/cameracalibrator-app.html}},
 	note = {Accessed: 2017-12-08},
 }
@@ -262,6 +262,19 @@ isbn = {},
 	pubstate = {March, 2016},
 }
 
+@article         {lecun-89e,
+	original =    "orig/lecun-89e.tiff",
+	author  =       "LeCun, Y. and Boser, B.  and Denker, J. S. and Henderson, D.
+	and Howard, R. E. and Hubbard, W. and Jackel,  L. D.",
+	title   =        "Backpropagation Applied to Handwritten Zip Code Recognition",
+	journal =        "Neural Computation",
+	year    =        "1989",
+	volume =         "1",
+	number =         "4",
+	pages =          "541-551",
+	month   =        "Winter"
+}
+
 @article{ILSVRC15,
 Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
 Title = {{ImageNet Large Scale Visual Recognition Challenge}},
@@ -283,6 +296,38 @@ year = {2012},
 publisher = {Curran Associates, Inc.},
 url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
 }
+
+@Inbook{Zeiler2014,
+	author="Zeiler, Matthew D.
+	and Fergus, Rob",
+	editor="Fleet, David
+	and Pajdla, Tomas
+	and Schiele, Bernt
+	and Tuytelaars, Tinne",
+	title="Visualizing and Understanding Convolutional Networks",
+	bookTitle="Computer Vision -- ECCV 2014: 13th European Conference, Zurich, Switzerland, September 6-12, 2014, Proceedings, Part I",
+	year="2014",
+	publisher="Springer International Publishing",
+	pages="818--833",
+
+}
+@article{dropout,
+	author    = {Geoffrey E. Hinton and
+	Nitish Srivastava and
+	Alex Krizhevsky and
+	Ilya Sutskever and
+	Ruslan Salakhutdinov},
+	title     = {Improving neural networks by preventing co-adaptation of feature detectors},
+	journal   = {CoRR},
+	volume    = {abs/1207.0580},
+	year      = {2012},
+	url       = {http://arxiv.org/abs/1207.0580},
+	archivePrefix = {arXiv},
+	eprint    = {1207.0580},
+	timestamp = {Wed, 07 Jun 2017 14:40:12 +0200},
+	biburl    = {http://dblp.org/rec/bib/journals/corr/abs-1207-0580},
+	bibsource = {dblp computer science bibliography, http://dblp.org}
+}}
 
 
 %</bibtex>
