--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,6 +1,7 @@
 %===================================== CHAP 3 =================================
 
 \chapter{Theory}
+In this chapter, blablabla...
 \section{Sensor Fusion}
 Robots and autonomous vehicles, be it a car or a ship, operate in unstructured environments, environments that are unpredictable. While robots working on a assembly line work in very structured, predictable environments, a vessel attempting to atonomously navigate a busy shipping lane has to rely on sensor inputs in order to make sense of its environment, and navigate safely. In sensing its environment, a vessel might use various sensors, such as radar(s), cameras, sonars or laser range finders. The different sensors typically give a incomplete and imperfect view of the surrounding world. Sensor data fusion is the process of combining such mutually complementary sensor information in such a way that a better understanding of the surroundings can be achieved \cite{sensorFusion1}.
 The U.S. Joint Directors of Laboratories (JDL) Data Fusion Working Group developed a process model in 1985 for characterizing hierarchical levels of fusion processing, categorized fusion functions, and candidate algorithm approaches, and is the most widely used system for categorizing data fusion-related functions \cite{JDLFusion}. The model is illustrated in figure \ref{fig:jdl_fusion}.
@@ -41,22 +42,29 @@ Computer vision is a field of engineering and science concerned with extracting 
 \end{figure}
 \footnotetext{Image courtesy: https://www.dsiac.org/resources/journals/dsiac/winter-2017-volume-4-number-1/real-time-situ-intelligent-video-analytics}
 As seen in figure \ref{fig:imagenet_top_5}, deep learning algorithms dominate the field of object category classification and detection, even outperforming humans with state-of-the-art deep convolutional neural nets. This section will introduce some necessary basic image processing operations, and give a brief introduction to convolutional neural nets used for image object classification and detection.
-\subsection{Spatial image filtering}
-The term spatial in spatial image filtering refer to the image plane itself, and spatial image processing involves direct manipulation of the pixels themselves in the image, in contrast to other methods operating in a transform domain such as the frequency plane. A spatial filter consists of a \textit{neighborhood} (also called a mask, kernel, template or window) (typically rectangular), and a \textit{predefined operation} that is performed on the pixels in the image encompassed by the neighborhood \cite{digImage}. Filtering the image creates a new pixel with coordinates equal to the center of the neighborhood, with value given by the predefined operation performed on the pixels in the neighborhood. Spatial filtering of an image of size $M\times N$ with a filter of size $m\times n$ is given by
+\subsection{Spatial Image Filtering}
+The term spatial in spatial image filtering refer to the image plane itself, and spatial image processing involves direct manipulation of the pixels themselves in the image, in contrast to other methods operating in a transform domain such as the frequency plane. A spatial filter consists of a \textit{kernel} (also called a mask, neighborhood, template or window) (typically rectangular), and a \textit{predefined operation} that is performed on the pixels in the image encompassed by the neighborhood \cite{digImage}. Filtering the image creates a new pixel with coordinates equal to the center of the neighborhood, with value given by the predefined operation performed on the pixels in the neighborhood. Spatial filtering of an image of size $M\times N$ with a filter of size $m\times n$ is given by
 \begin{equation}
 \label{eq:spatial_filt}
     g(x,y)=w(x,y)*f(x,y)=\sum^{a}_{s=-a}\sum^{b}_{t=-b}w(s,t)f(x-s,y-t)
 \end{equation}
-where $a=\frac{m-1}{2}$ and $b=\frac{n-1}{2}$, $w(s,t)$ is the filter mask, with its center at $w(0,0)$ aligned with the pixel at location $(x,y)$. $g(x,y)$ is the response of the filter at location $(x,y)$. $*$ denotes the convolution operator. $x$ and $y$ are varied such that each pixel in the image is visited. In other words, spatial filtering of an image with a mask of size $m\times n$ corresponds to convolving the image with the mask. The filter and the corresponding image pixels for a given $(x,y)$ are illustrated in figure \ref{fig:spatial_filter}. The filter mask used in this illustration is $3\times3$ pixels.
+where $a=\frac{m-1}{2}$ and $b=\frac{n-1}{2}$, $w(s,t)$ is the filter kernel, with its center at $w(0,0)$ aligned with the pixel at location $(x,y)$. $g(x,y)$ is the response of the filter at location $(x,y)$. $*$ denotes the convolution operator. $x$ and $y$ are varied such that each pixel in the image is visited. In other words, spatial filtering of an image with a kernel of size $m\times n$ corresponds to convolving the image with the kernel. The filter and the corresponding image pixels for a given $(x,y)$ are illustrated in figure \ref{fig:spatial_filter}. The filter kernel used in this illustration is $3\times3$ pixels.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\linewidth]{fig/digimageproc.png}
 	\caption{}
 	\label{fig:spatial_filter}
 \end{figure}
-Convolution between the image and the filter mask corresponds to correlating the image and the filter mask rotated 180 degrees.
+Convolution between the image and the filter kernel corresponds to correlating the image and the filter kernel rotated 180 degrees.
 \subsection{Convolutional Neural Nets for Object Recognition}
-What is a neural net, brief description of convolutional neural nets.
+A convolutional neural net, abbreviated CNN, is a neural network designed for object recognition in images. Since their introduction by LeCun \textit{et al}. \cite{lecun-89e} in the late 1980's, convolutional neural nets have shown excellent performance at tasks such as hand-written digit classification and face detection. In 2012, Krizhevsky \textit{et al}. \cite{NIPS2012_4824} won the ImageNet 2012 classification benchmark with their deep convolutional neural network, dubbed AlexNet, achieving an top-5 test error rate of 15.3\%, compared with the 2nd place result of 26.2\%. Since then, the ImageNet classification benchmark has been dominated by deep convolutional nets. The dramatic improvement in performance can be attributed to several factors:
+\begin{enumerate}
+	\item The availability of very large datasets, with millions of labeled examples.
+	\item The adaptation of powerful GPU processing implementations, making training of very large models tractable.
+	\item Better model regularization strategies, such as dropout, to prevent overfitting \cite{dropout}.
+\end{enumerate}
+
+In a classifier using classical computer vision techniques, features are extracted from an image, for example using a histogram of oriented gradients, and the extracted features are subsequently used to train a classifier such as a support-vector machine. In a convolutional neural network, on the other hand, the features are hidden, and feature extraction and classification is performed in a single pipeline. Features in a CNN are generated via one or several layers of filter convolutions, which generates a set of abstract sub-images from the input image. For the user, a CNN classifier appears as a "black box" where the internal workings of the feature extraction and classification are largely hidden. In order to understand how a convolutional neural net works, some basic concepts need to be introduced.
 \section{Target tracking}
 Necessary? Will not implement tracking at this stage anyway.
 \subsection{Clustering}
