--- a/chapter4.tex
+++ b/chapter4.tex
@@ -118,7 +118,7 @@ Having calibrated the camera, the radial distortion in the images can be removed
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=.8\linewidth]{fig/calibration_distorted.PNG}
-		\caption{Distorted image.}
+		\caption{Original image with radial distortion.}
 		\label{fig:sub_distort1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
